Fixing alignment of filter modulation controls in narrow viewport

--- a/sass/jssynth.scss
+++ b/sass/jssynth.scss
@@ -309,6 +309,8 @@ input.note:focus {
   .waveformOptionsContainer {
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
+    flex: 1;
+    -webkit-flex: 1;
   }
 
   .radioContainer {
